--- a/atelier1/src/templates/actualite.html
+++ b/atelier1/src/templates/actualite.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Actualité</title>
-</head>
-<body>
-    {{ contenu | safe }}
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Actualité{% endblock %}
+
+{% block content %}
+<div class="container">
+    <div class="card mb-3 bg-secondary-subtle rounded rounded-3 border border-5 border-dark-subtle">
+        <img src="../assets/img/{{actualite.imageFichier}}" class="card-img-top" alt="{{actualite.titre}}">
+        <div class="card-body">
+            <p class="card-text">{{actualite.contenu}}</p>
+        </div>
+    </div>
+</div>
+{% endblock %}
