--- a/atelier1/src/templates/actualite.html
+++ b/atelier1/src/templates/actualite.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container">
-    <div class="card mb-3 bg-secondary-subtle rounded rounded-3 border border-5 border-dark-subtle">
+    <div class="card mb-3 rounded rounded-3 border border-5 border-dark-subtle">
         <img src="../assets/img/{{actualite.imageFichier}}" class="card-img-top" alt="{{actualite.titre}}">
         <div class="card-body">
             <p class="card-text">{{actualite.contenu}}</p>
