--- a/atelier1/src/templates/base.html
+++ b/atelier1/src/templates/base.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Titre par défaut{% endblock %}</title>
+    <title>{% block title %}Vivre aux Lilas{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     {% block extra_css %}{% endblock %}
 </head>
-<body>
+<body class="bg-secondary-subtle">
     <header>
         {% include 'navbar.html' %}
     </header>
