--- a/atelier1/src/templates/base.html
+++ b/atelier1/src/templates/base.html
@@ -12,9 +12,12 @@
     <header>
         {% include 'navbar.html' %}
     </header>
-    <div class="container mt-4">
+    <main class="container mt-4">
         {% block content %}{% endblock %}
-    </div>
+    </main>
+    <footer class="bg-dark text-white text-center py-3 mt-5">
+        {% include 'footer.html' %}
+    </footer>
 
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
