--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-lg navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">
-            <img src="/assets/img/logo.png" alt="" width="50" height="50" class="d-inline-block align-text-center">
+        <a class="navbar-brand" href="./{{ file_depth }}">
+            <img src="./{{ file_depth }}assets/img/logo.png" alt="" width="50" height="50" class="d-inline-block align-text-center">
             Vivre aux lilas
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -11,10 +11,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/">Accueil</a>
+                    <a class="nav-link" aria-current="page" href="./{{ file_depth }}">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/membres.html">Membres</a>
+                    <a class="nav-link" href="./{{ file_depth }}membres.html">Membres</a>
                 </li>
             </ul>
         </div>
